--- a/eladmin-system/src/main/resources/config/application-dev.yml
+++ b/eladmin-system/src/main/resources/config/application-dev.yml
@@ -98,7 +98,7 @@ login:
   #  验证码
   login-code:
     #  验证码类型配置 查看 LoginProperties 类
-    code-type: arithmetic
+    code-type: gif
     #  登录图形验证码有效时间/分钟
     expiration: 2
     #  验证码高度
