将方法细化。单个方法只使用一个session（有读有写的逻辑，读写都使用同一个session），在方法上使用事务注解标注事务的管理器 @Transactional(value = "transactionManagerLinux", rollbackFor = Exception.class)

--- a/eladmin-system/src/main/resources/config/application-dev.yml
+++ b/eladmin-system/src/main/resources/config/application-dev.yml
@@ -54,8 +54,9 @@ spring:
         db-type: com.alibaba.druid.pool.DruidDataSource
         driverClassName: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
         url: jdbc:log4jdbc:mysql://${DB_HOST:10.100.6.140}:${DB_PORT:3308}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
-        username: ${DB_USER:root}
-        password: ${DB_PWD:root}
+#        从库改用只读账号
+        username: ${DB_USER:reader}
+        password: ${DB_PWD:123456}
         # 初始连接数
         initial-size: 5
         # 最小连接数
