--- a/pom.xml
+++ b/pom.xml
@@ -262,11 +262,11 @@
             <!-- 解决 Java-16下 lombok报错：
             Fatal error compiling: java.lang.IllegalAccessError: class lombok.javac.apt.LombokProcessor (in unnamed module @0x486bcaa) cannot access class com.sun.tools.javac.processing.JavacProcessingEnvironment (in module jdk.compiler) because module jdk.compiler does not export com.sun.tools.javac.processing to unnamed module @0x486bcaa
             在最新的JDK-16构建中看到的异常是由于jep396：默认情况下强封装JDK内部构件。Lombok正在使用反射访问一个内部jdkapi，在以前的Java版本中，这会导致警告消息，现在则会导致硬错误。
-            一般来说，在运行java时，通过在运行java时传递--add-opens=<module>/<package>=<accessing module>指令作为VM参数，可以显式地打开内部JDK包进行反射。在这种情况下，需要将这些指令传递给调用javac时运行的java进程。这可以通过在传递给javac的选项前面加上-J来完成，后者将把它传递给底层JVM。
+            一般来说，在运行java时，通过在运行java时传递——add-opens=<module>/<package>=<accessing module>指令作为VM参数，可以显式地打开内部JDK包进行反射。在这种情况下，需要将这些指令传递给调用javac时运行的java进程。这可以通过在传递给javac的选项前面加上-J来完成，后者将把它传递给底层JVM。
             其中需要的选项在配置中使用<compilerArgs>元素传递。
             注意，我在选项前面添加了-J，以便将它们传递给运行javac的JVM，而不是javac选项。
-            在问题中列出的--add-opens指令之外，还有一个额外的：
-                -J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED
+            在问题中列出的——add-opens指令之外，还有一个额外的：
+                -J——add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED
             也是需要的。
             <fork>true</fork>也是必需的，否则-J选项将被忽略（从mvn clean install -X的输出判断）。查看Maven文档，在使用<compilerArgs>时，似乎需要随时将fork设置为true：
             参考：https://maven.apache.org/plugins/maven-compiler-plugin/compile-mojo.html#compilerArgs
