--- a/eladmin-system/src/main/resources/config/application-dev.yml
+++ b/eladmin-system/src/main/resources/config/application-dev.yml
@@ -191,7 +191,7 @@ spring:
       max-active: 10
       max-idle: 5
       min-idle: 1
-  main2-redis:
+  auth-redis:
     #数据库索引
     database: ${REDIS_DB:6}
     host: ${REDIS_HOST:10.100.6.140}
