集成Kafka集群。Warning：当前集群无法外部访问，相关逻辑待验证

--- a/eladmin-system/pom.xml
+++ b/eladmin-system/pom.xml
@@ -91,6 +91,11 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-access</artifactId>
         </dependency>
+        <!--kafka-->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
     </dependencies>
 
     <profiles>
