--- a/eladmin-system/src/main/resources/config/application-dev.yml
+++ b/eladmin-system/src/main/resources/config/application-dev.yml
@@ -216,6 +216,68 @@ spring:
       max-idle: 5
       min-idle: 1
 
+###########【Kafka集群】###########
+  kafka:
+#    使用zookeeper后，可以只配置集群中的一个节点。但是其他节点的ip为k8s内的ip，在外部无法访问，解决方式待定
+    bootstrap-servers: 10.100.6.140:31090,10.100.6.140:21091,10.100.6.140:31092
+  ###########【初始化生产者配置】###########
+  # 重试次数
+    producer:
+      retries: 0
+  # 应答级别:多少个分区副本备份完成时向生产者发送ack确认(可选0、1、all/-1)
+      acks: 1
+  # 批量大小
+      batch-size: 1638
+  # 提交延时
+      properties:
+        linger:
+          ms: 0
+  # 当生产端积累的消息达到batch-size或接收到消息linger.ms后,生产者就会将消息提交给kafka
+  # linger.ms为0表示每接收到一条消息就提交给kafka,这时候batch-size其实就没用了
+  # 生产端缓冲区大小
+      buffer-memory: 335544
+  # Kafka提供的序列化和反序列化类
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+  # 自定义分区器
+  # spring.kafka.producer.properties.partitioner.class=com.felix.kafka.producer.CustomizePartitioner
+  ###########【初始化消费者配置】###########
+  # 默认的消费组ID
+    consumer:
+      properties:
+        group:
+          id: defaultConsumerGroup
+      # 消费会话超时时间(超过这个时间consumer没有发送心跳,就会触发rebalance操作)
+        session:
+          timeout:
+            ms: 120000
+        # 消费请求超时时间
+        request:
+          timeout:
+            ms: 180000
+  # 是否自动提交offset
+      enable-auto-commit: true
+  # 提交offset延时(接收到消息后多久提交offset)
+      auto:
+        commit:
+          interval:
+            ms: 1000
+  # 当kafka中没有初始offset或offset超出范围时将自动重置offset
+  # earliest:重置为分区中最小的offset;
+  # latest:重置为分区中最新的offset(消费分区中新产生的数据);
+  # none:只要有一个分区不存在已提交的offset,就抛出异常;
+      auto-offset-reset: latest
+  # Kafka提供的序列化和反序列化类
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+  # 消费端监听的topic不存在时，项目启动会报错(关掉)
+    listener:
+      missing-topics-fatal: false
+# 设置批量消费
+# spring.kafka.listener.type=batch
+# 批量消费每次最多消费多少条消息
+# spring.kafka.consumer.max-poll-records=50
+
 # 登录相关配置
 login:
   # 登录缓存
