kafka相关日志输出调整

--- a/eladmin-system/src/main/resources/config/application-dev.yml
+++ b/eladmin-system/src/main/resources/config/application-dev.yml
@@ -269,12 +269,12 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       # 批量消费每次最多消费多少条消息
-#      max-poll-records: 50
+      max-poll-records: 50
   # 消费端监听的topic不存在时，项目启动会报错(关掉)
     listener:
       missing-topics-fatal: false
 # 设置批量消费
-#      type: batch
+      type: batch
 
 # 登录相关配置
 login:
