--- a/eladmin-system/src/main/resources/config/application-dev.yml
+++ b/eladmin-system/src/main/resources/config/application-dev.yml
@@ -234,7 +234,7 @@ spring:
           ms: 0
       # 自定义分区器
 #        partitioner:
-#          class: com.lwohvye.modules.content.config.CustomizePartitioner
+#          class: com.lwohvye.config.kafka.CustomizePartitioner
   # 当生产端积累的消息达到batch-size或接收到消息linger.ms后,生产者就会将消息提交给kafka
   # linger.ms为0表示每接收到一条消息就提交给kafka,这时候batch-size其实就没用了
   # 生产端缓冲区大小
