--- a/pom.xml
+++ b/pom.xml
@@ -318,6 +318,13 @@
                 </configuration>
             </plugin>
         </plugins>
+        <!--todo 针对异常
+        java.lang.reflect.InaccessibleObjectException: Unable to make field private final java.lang.String java.lang.NamedPackage.name accessible: module java.base does not "opens java.lang" to unnamed module @7bfcd12c
+        需要在jvm 中添加启动参数
+        &#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED
+        如果反射代码在命名模块中，则ALL-UNNAMED可以用其名称替换。
+        如果要添加的标志太多，则可以考虑使用封装终止开关 &#45;&#45;permit-illegal-access。它将允许类路径上的所有代码反射所有已命名的模块
+        -->
     </build>
 
     <repositories>
