简单整合mongodb（单点。集群模式todo）

--- a/eladmin-system/src/main/resources/config/application-dev.yml
+++ b/eladmin-system/src/main/resources/config/application-dev.yml
@@ -163,6 +163,14 @@ spring:
       sql:
         show：true
 
+#  monogodb
+  data:
+    mongodb:
+      host: 10.100.6.140:27017
+#      username: test_user
+#      password: pass@123
+      database: eladmin
+
   # redis配置
   main-redis:
     #数据库索引
