--- a/pom.xml
+++ b/pom.xml
@@ -330,7 +330,7 @@
                         </path>
                     </annotationProcessorPaths>
                     <!--https://docs.spring.io/spring-boot/docs/2.4.4/reference/html/appendix-configuration-metadata.html#configuration-metadata-annotation-processor-->
-                    <proc>none</proc>
+                    <!--<proc>none</proc>-->
                 </configuration>
             </plugin>
         </plugins>
