eladmin-starter模块测试通过。 eladmin-search依旧报错。推测可能不是shardingsphere的问题。因为该模块未引用该依赖

--- a/pom.xml
+++ b/pom.xml
@@ -163,7 +163,7 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- druid数据源驱动 -->
+        <!-- druid数据源驱动 ; 注：使用shardingsphere时。这里不能用druid但spring-boot-starter -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
