--- a/eladmin-starter/src/main/resources/config/application-dev.yml
+++ b/eladmin-starter/src/main/resources/config/application-dev.yml
@@ -3,7 +3,7 @@ spring:
   shardingsphere:
     datasource:
       names: primary-ds,replica-ds-0,replica-ds-1
-      #      公共配置
+      #     主数据源
       primary-ds:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
@@ -162,18 +162,6 @@ spring:
     props:
       sql:
         show：true
-
-#    props:
-#      sql-show：true
-
-  #  monogodb
-#  data:
-#    mongodb:
-#      host: 10.100.6.140
-#      port: 27017
-      # username: test_user
-      # password: pass@123
-#      database: eladmin
 
   # redis配置
   main-redis:
