可在配置中配置实体映射的表名信息

--- a/eladmin-starter/src/main/resources/config/application.yml
+++ b/eladmin-starter/src/main/resources/config/application.yml
@@ -43,6 +43,8 @@ spring:
         ddl-auto: none
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
         enable_lazy_no_trans: true
+        naming:
+          physical-strategy: com.lwohvye.config.ServerAwareNamingStrategy
     open-in-view: true
 
 #  # 全局懒加载。
