--- a/eladmin-starter/src/main/resources/config/application.yml
+++ b/eladmin-starter/src/main/resources/config/application.yml
@@ -43,8 +43,9 @@ spring:
         ddl-auto: none
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
         enable_lazy_no_trans: true
-        naming:
-          physical-strategy: com.lwohvye.config.ServerAwareNamingStrategy
+#        指定表名解析。spring下可不加。会自动使用
+#        naming:
+#          physical-strategy: com.lwohvye.config.ServerAwareNamingStrategy
     open-in-view: true
 
 #  # 全局懒加载。
