--- a/eladmin-starter/src/main/resources/config/application-dev.yml
+++ b/eladmin-starter/src/main/resources/config/application-dev.yml
@@ -275,6 +275,13 @@ spring:
       missing-topics-fatal: false
       # 设置批量消费
       type: batch
+  ##### RabbitMQ ####
+  rabbitmq:
+    host: 10.100.6.140 # rabbitmq的连接地址
+    port: 5672 # rabbitmq的连接端口号
+    virtual-host: /rabbit # rabbitmq的虚拟host
+    username: admin # rabbitmq的用户名
+    password: admin # rabbitmq的密码
 
 # 登录相关配置
 login:
