--- a/pom.xml
+++ b/pom.xml
@@ -363,4 +363,11 @@
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub OWNER Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/lWoHvYe/eladmin</url>
+        </repository>
+    </distributionManagement>
 </project>
